# jira-ai-agent

./: .env.example  .env.production.example  .gitignore  CHANGELOG_REACT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  Dockerfile  Dockerfile.backend  NEXT_STEPS_DEPLOYMENT.md  PARSER_IMPROVEMENTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_AUTH.md  REFACTORING_SUMMARY.md  RENDER_DEPLOYMENT.md  SOLUCION_ASSIGNEE.md  SUBTASKS_SYSTEM.md  TREE.txt  WORKFLOW_REELS_INSTAGRAM.md  check_jira_fields.py  deploy_railway.sh  docker-compose.production.yml  docker-compose.yml  ejemplo_carrusel.py  ejemplo_descripcion_tarea.md  ejemplo_react_descripcion.md  list_projects.py  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements.txt  test_auth_endpoints.sh  test_auth_system.py  test_batch_tasks.py  test_create_issue.py  test_instagram_workflow.py  test_parsing.py  test_subtasks_endpoint.sh  (+1 more)
.claude/: settings.local.json
app/: main.py
app/api/: dependencies.py
docs/: AUTHENTICATION_ANALYSIS.md  AUTH_QUICK_START.md  BACKEND_AUTH_SUMMARY.md  COST_COMPARISON.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_GUIDE.md  FREE_BACKEND_OPTIONS.md  LOCAL_TESTING_GUIDE.md  NETLIFY_DEPLOYMENT.md  PROJECT_STRUCTURE.md  PROTECTED_ENDPOINTS_SUMMARY.md  QUICK_START_DEPLOYMENT.md
ejemplos/: ejemplo_users_endpoint.py
examples/: test_jira_client.py  test_task_parser.py
jira-tracker/: .env.example  .render-deploy  Dockerfile.frontend  README.md  deploy_vercel.sh  nginx.conf  package-lock.json  package.json
scripts/: run_dev.sh  setup.sh
tests/: conftest.py
(+79 files in other folders)
